Updated composer.json file

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "amilna/yii2-nivo-slider",
+    "name": "inspirenmy/yii2-nivo-slider",
     "description": "Nivo slider widget for Yii2",
     "keywords": ["yii2", "nivo", "widget", "banner"],
     "type": "yii2-extension",
